# enako-bot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  docker-compose.yml.ba
nonebot/: bot.py  dockerfile  dockerfile.backup  pyproject.toml  requirements.txt
nonebot/src/plugins/bot_assist/: __init__.py  common.py  config.py
nonebot/src/plugins/gsz-assist/: __init__.py  ratedata_manage.py  service.py  template_env.py  userdata_manage.py
nonebot/src/plugins/mahjong-assist/: __init__.py  postprocess.py  service.py
nonebot/src/plugins/nonebot-plugin-group-assist/: __init__.py  common.py  config.py
nonebot/src/plugins/nonebot-plugin-gsz-assist/: __init__.py  common.py  ratedata_manage.py  service.py  userdata_manage.py
nonebot/src/plugins/nonebot-plugin-mahjong-assist/: __init__.py  common.py  config.py  gsz.py  infer_hand.py  mahjong_analyzer.py  service.py  template_env.py
nonebot/src/plugins/nonebot-plugin-mahjong_assist/: __init__.py  common.py  service.py
nonebot/src/plugins/nonebot-plugin-management/: __init__.py  common.py  config.py  plugindata_manage.py  register.py
nonebot/src/plugins/nonebot-plugin-naga-assist/: __init__.py  auto_naga.py  common.py  config.py  event_functions.py  role_check.py  userdata_manage.py
nonebot/src/plugins/nonebot-plugin-naga_assist/: __init__.py  auto_naga.py  common.py  config.py  role_asssgnment.py  role_check.py  userdata_manage.py
nonebot/src/plugins/nonebot-plugin-qqshell/: __init__.py  config.py  handler.py  services.py
nonebot/src/plugins/nonebot-plugin_management/: __init__.py  register.py
(+39 files in other folders)
